--- a/index.html
+++ b/index.html
@@ -10,46 +10,114 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- CSS -->
+<style>
+  .modal-dialog {
+    max-width: 40%;
+    margin: 1.75rem auto;
+  }
+  
+  .modal-content {
+    height: 100%;
+    border-radius: .3rem;
+  }
+
+  .modal-body {
+    overflow-y: auto;
+  }
+  
+  @media (max-width: 576px) {
+    .modal-dialog {
+      margin: 0;
+      height: 100%;
+    }
+  }
+</style>
   </head>
 
   <body>
-    <!-- header -->
-    <header class="p-4 bg-info text-white fs-1">Galaxy Fintech</header>
-    <!-- navbar -->
-    <nav class="navbar navbar-light bg-secondary-subtle">
-      <div class="container-fluid d-flex justify-content-end">
+    <!-- Header -->
+    <header
+      class="p-3 text-white text-start text-md-start fs-2 fs-md-1"
+      style="background: linear-gradient(to right, #00aaff, #0047b3)"
+    >
+      <div class="container">
+        <h1 class="mb-0">Company Name</h1>
+        <p class="mb-0 fs-5">Company Description About Technology</p>
+      </div>
+    </header>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary-subtle">
+      <div class="container-fluid">
+        <!-- Navbar Toggler for Mobile View -->
         <button
+          class="navbar-toggler"
           type="button"
-          class="btn btn-info me-3 text-white"
-          data-toggle="modal"
-          data-target="#exampleModalCenter"
+          data-toggle="collapse"
+          data-target="#navbarContent"
+          aria-controls="navbarContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-          Add
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <input
-          type="search"
-          class="form-control w-25"
-          placeholder="search"
-          id="search"
-          oninput="filterItem(value)"
-        />
+
+        <!-- Navbar Content -->
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+
+          <form class="d-flex me-2">
+            <input
+              type="search"
+              class="form-control me-2"
+              placeholder="Search"
+              id="search"
+              oninput="filterItem(value)"
+              style="border-color:#6691d6;"
+            />
+            <button
+              class="btn"
+              type="button"
+              data-toggle="modal"
+              data-target="#exampleModalCenter"
+              style="
+                background-color: #007bff;
+                border-color: #007bff;
+                color: white;
+              "
+            >
+              Add
+            </button>
+          </form>
+          <!-- <button type="button" class="btn btn-info text-white" data-toggle="modal" data-bs-target="#exampleModalCenter">
+            Add
+          </button> -->
+        </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <table class="table" id="dataTable">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Gender</th>
-            <th scope="col">E-mail</th>
-            <th scope="col">Contact No.</th>
-            <th scope="col">Controls</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
 
-      <nav aria-label="Page navigation example">
+    <div class="container my-4 p-3">
+      <!-- Make the table responsive -->
+      <div class="table-responsive">
+        <table class="table table-bordered text-wrap" id="dataTable">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Gender</th>
+              <th scope="col">E-mail</th>
+              <th scope="col">Contact No.</th>
+              <th scope="col">Controls</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Dynamic content will be loaded here -->
+          </tbody>
+        </table>
+      </div>
+
+      <!-- Pagination Section -->
+      <nav aria-label="Page navigation example" class="mt-3">
         <ul class="pagination justify-content-center">
           <li class="page-item me-2">
             <select
@@ -90,9 +158,12 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-header d-flex justify-content-between bg-info">
+          <div
+            class="modal-header d-flex justify-content-between"
+            style="background: linear-gradient(to right, #00aaff, #0047b3)"
+          >
             <h5 class="modal-title text-white" id="exampleModalLabel">
               Confirm Delete..!
             </h5>
@@ -111,16 +182,22 @@
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-info text-white"
+              class="btn text-white"
               data-dismiss="modal"
+              style="background-color: #28a745"
             >
               No
             </button>
             <button
               type="button"
-              class="btn btn-info text-white"
+              class="btn text-white"
               data-dismiss="modal"
               onclick="confirmDel()"
+              style="
+                background-color: #dc3545;
+                border-color: #dc3545;
+                color: white;
+              "
             >
               Yes
             </button>
@@ -129,77 +206,62 @@
       </div>
     </div>
 
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="viewModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalCenterTitle"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header d-flex justify-content-between bg-info">
-            <h5 class="modal-title text-white" id="exampleModalLongTitle">
-              View Details
-            </h5>
-            <button
-              type="button"
-              class="close btn"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="d-flex">
-              <h5>Fullname :</h5>
-              <p id="v_fullname"></p>
-            </div>
-            <div class="d-flex">
-              <h5>E-mail :</h5>
-              <p id="v_email"></p>
-            </div>
-            <div class="d-flex">
-              <h5>Contact-Type :</h5>
-              <p id="v_contact-type"></p>
-            </div>
-            <div class="d-flex">
-              <h5>Contact :</h5>
-              <p id="v_contact"></p>
-            </div>
-            <div class="d-flex">
-              <h5>Gender :</h5>
-              <p id="v_gender"></p>
-            </div>
-            <div class="d-flex">
-              <h5>Currennt add :</h5>
-              <p id="v_c_add"></p>
-            </div>
-            <div class="d-flex">
-              <h5>Permanent add :</h5>
-              <p id="v_p_add"></p>
-            </div>
-            <div class="d-flex">
-              <h5>DOB :</h5>
-              <p id="v_dob"></p>
-            </div>
-          </div>
+    <!-- View Details Modal -->
+<div class="modal fade" id="viewModal" tabindex="-1" aria-labelledby="viewModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable " role="document">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header" style="background: linear-gradient(to right, #00aaff, #0047b3);">
+        <h5 class="modal-title text-white" id="viewModalLabel">View Details</h5>
+        <button type="button" class="btn-close text-white" data-dismiss="modal" aria-label="Close"></button>
+      </div>
 
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-info text-white"
-              data-dismiss="modal"
-            >
-              Ok
-            </button>
-          </div>
+      <!-- Modal Body -->
+      <div class="modal-body">
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Full Name:</strong></h6>
+          <p id="v_fullname" class="mb-0">John Doe</p>
+        </div>
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Email:</strong></h6>
+          <p id="v_email" class="mb-0">john.doe@example.com</p>
+        </div>
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Contact Type:</strong></h6>
+          <p id="v_contact-type" class="mb-0">Mobile</p>
+        </div>
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Contact:</strong></h6>
+          <p id="v_contact" class="mb-0">+1234567890</p>
+        </div>
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Gender:</strong></h6>
+          <p id="v_gender" class="mb-0">Male</p>
+        </div>
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Current Address:</strong></h6>
+          <p id="v_c_add" class="mb-0">123 Street, City</p>
+        </div>
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Permanent Address:</strong></h6>
+          <p id="v_p_add" class="mb-0">456 Avenue, City</p>
+        </div>
+        <div class="mb-3">
+          <h6 class="mb-1"><strong>Date of Birth:</strong></h6>
+          <p id="v_dob" class="mb-0">01/01/1990</p>
         </div>
       </div>
+
+      <!-- Modal Footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Ok</button>
+      </div>
     </div>
+  </div>
+</div>
+
+
+
 
     <!-- Edit Modal -->
     <div
@@ -210,15 +272,19 @@
       aria-labelledby="exampleModalCenterTitle"
       aria-hidden="true"
     >
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable " role="document">
         <div class="modal-content">
-          <div class="modal-header d-flex justify-content-between bg-info">
+          
+          <div
+            class="modal-header d-flex justify-content-between"
+            style="background: linear-gradient(to left, #00aaff, #0047b3)"
+          >
             <h5 class="modal-title text-white" id="exampleModalLongTitle">
               Edit Details
             </h5>
             <button
               type="button"
-              class="close btn"
+              class="close btn text-white"
               data-dismiss="modal"
               aria-label="Close"
             >
@@ -366,7 +432,12 @@
                 <label for="dob" class="form-label">Date of Birth</label>
                 <input type="date" class="form-control" id="e_dob" required />
               </div>
-              <button type="submit" class="btn btn-info text-white" id="sub">
+              <button
+                type="submit"
+                class="btn text-white"
+                style="background-color: #0099ff; border-color: #0099ff"
+                id="sub"
+              >
                 Save changes
               </button>
             </form>
@@ -375,7 +446,7 @@
       </div>
     </div>
 
-    <!-- Modal form-->
+    <!-- Modal Add Form-->
     <div
       class="modal fade"
       id="exampleModalCenter"
@@ -386,7 +457,10 @@
     >
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-header d-flex justify-content-between bg-info">
+          <div
+            class="modal-header d-flex justify-content-between"
+            style="background: linear-gradient(to left, #00aaff, #0047b3)"
+          >
             <h5 class="modal-title text-white" id="exampleModalLongTitle">
               User Detail Form
             </h5>
@@ -581,16 +655,12 @@
               <div class="modal-footer">
                 <button
                   type="button"
-                  class="btn btn-info text-white"
+                  class="btn btn-secondary"
                   data-dismiss="modal"
                 >
                   Back
                 </button>
-                <button
-                  type="submit"
-                  class="btn btn-info text-white"
-                  id="form_submit"
-                >
+                <button type="submit" class="btn btn-primary" id="form_submit">
                   Submit
                 </button>
               </div>
@@ -616,5 +686,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css"
+    />
   </body>
 </html>
